# Pathfinder

./: CMakeLists.txt  a.out
inc/: pathfinder.h  pathfinder.h.gch
libmx/: Makefile
libmx/inc/: libmx.h
libmx/src/: a.out  mx_atoi.c  mx_bubble_sort.c  mx_count_substr.c  mx_count_words.c  mx_create_node.c  mx_del_strarr.c  mx_get_sudstr_index.c  mx_hex_to_nbr.c  mx_isalpha.c  mx_isdigit.c  mx_isspace.c  mx_itoa.c  mx_list_size.c  mx_memccpy.c  mx_memchr.c  mx_memcmp.c  mx_memcpy.c  mx_memmem.c  mx_memmove.c  mx_memrchr.c  mx_memset.c  mx_nbr_to_hex.c  mx_pop_back.c  mx_pop_front.c  mx_pow.c  mx_print_strarr.c  mx_print_unicode.c  mx_printint.c  mx_push_back.c  mx_push_front.c  mx_read_line.c  mx_realloc.c  mx_replace_substr.c  mx_sort_list.c  mx_str_reverse.c  mx_strcat.c  mx_strchr.c  mx_strcmp.c  mx_strcpy.c  (+11 more)
pathfinder check/: check.sh  empty  example3
src/: algorithm.c  main.c  parse.c  print.c  read_file.c  validation.c
